--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
           <li><a href="products.html">Products</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="services.html">Services</a></li>
         </ul>
       </nav>
     </header>
