--- a/client/contact.html
+++ b/client/contact.html
@@ -15,7 +15,7 @@
         <li><a href="products.html">Products</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="services.html">Services</a></li>
+        <li><a href="services.html">Services</a></li> 
       </ul>
     </nav>
   </header>
@@ -24,7 +24,7 @@
     <section class="contact-form">
       <h2>Contact Us</h2>
       <p>If you have any questions or inquiries, please feel free to get in touch with us using the form below.</p>
-      <form action="#" method="post">
+      <form action="#" method="post" id="contact-form">
         <label for="name">Your Name</label>
         <input type="text" id="name" name="name" required>
         
@@ -34,11 +34,19 @@
         <label for="message">Your Message</label>
         <textarea id="message" name="message" rows="4" required></textarea>
         
-        <button type="submit" class="cta-button">Send Message</button>
+        <button type="submit" class="cta-button" id="submit-button">Send Message</button>
       </form>
+
+      <div id="success-message" style="display: none;">
+        <p>Your message has been sent successfully!</p>
+      </div>
     </section>
   </main>
   
+ 
+  <script src="api_connector.js"></script>
+  <script src="contact.js"></script>
+
   <footer>
     <p>&copy; 2023 Fischers Frische Fische. All rights reserved.</p>
   </footer>
