--- a/client/about.html
+++ b/client/about.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Willkommen bei Fischers Frische Fische, Ihrem One-Stop-Shop für hochwertiges Angelzubehör und Ausrüstung. Unser engagiertes Team von Anglern ist bestrebt, die besten Produkte und Expertenberatung anzubieten, um Ihr Angelerlebnis zu verbessern.">
+  <meta name="keywords" content="Fischers Frische Fische, Angelzubehör, Angelgerät, hochwertiges Angelzubehör, Angeln, Angelausrüstung">
   <link rel="stylesheet" href="styles.css">
   <title>About Us - Fishing Accessories Shop</title>
 </head>
