--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
     <header>
       <h1>Fischers Frische Fische</h1>
       <nav>
+        <div id="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Products</a></li>
@@ -18,6 +19,8 @@
           <li><a href="contact.html">Contact</a></li>
           <li><a href="services.html">Services</a></li>
         </ul>
+      </div>
+      <div id="mobile-menu-button">&#9776;</div>
       </nav>
     </header>
     
@@ -33,4 +36,8 @@
       <p>&copy; 2023 Fishing Accessories Shop. All rights reserved.</p>
     </footer>
   </body>
+
+    <script src="index.js"></script>
+
+  
 </html>
