--- a/client/products.html
+++ b/client/products.html
@@ -11,6 +11,7 @@
   <header>
     <h1>Fischers Frische Fische</h1>
     <nav>
+      <div id="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
@@ -18,6 +19,8 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="services.html">Services</a></li>
       </ul>
+    </div>
+    <div id="mobile-menu-button">&#9776;</div>
     </nav>
   </header>
   
@@ -35,4 +38,5 @@
     <p>Images by <a href="https://unsplash.com/">UnSplash </a><a href="https://www.pexels.com/">Pexels </a><a href="https://www.istockphoto.com/">iStockPhoto</a></p>
   </footer>
 </body>
+<script src="index.js"></script>
 </html>
