nav responsives added humberburgericon, index,js connected

--- a/client/services.html
+++ b/client/services.html
@@ -10,6 +10,7 @@
   <header>
     <h1>Fischers Frische Fische</h1>
     <nav>
+      <div id="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
@@ -17,6 +18,8 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="services.html">Services</a></li>
       </ul>
+    </div>
+    <div id="mobile-menu-button">&#9776;</div>
     </nav>
   </header>
   
@@ -48,4 +51,5 @@
     <p>&copy; 2023 Fischers Frische Fische. All rights reserved.</p>
   </footer>
 </body>
+<script src="index.js"></script>
 </html>
