nav responsivesnesss work, index.js connected

--- a/client/about.html
+++ b/client/about.html
@@ -12,6 +12,7 @@
   <header>
     <h1>Fischers Frische Fische</h1>
     <nav>
+      <div id="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
@@ -19,6 +20,8 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="services.html">Services</a></li>
       </ul>
+    </div>
+    <div id="mobile-menu-button">&#9776;</div>
     </nav>
   </header>
   
@@ -35,4 +38,5 @@
     <p>&copy; 2023 Fischers Frische Fische. All rights reserved.</p>
   </footer>
 </body>
+<script src="index.js"></script>
 </html>
