--- a/client/contact.html
+++ b/client/contact.html
@@ -10,13 +10,16 @@
   <header>
     <h1>Fischers Frische Fische</h1>
     <nav>
+      <div id="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="services.html">Services</a></li> 
+        <li><a href="services.html">Services</a></li>
       </ul>
+    </div>
+    <div id="mobile-menu-button">&#9776;</div>
     </nav>
   </header>
   
@@ -51,4 +54,5 @@
     <p>&copy; 2023 Fischers Frische Fische. All rights reserved.</p>
   </footer>
 </body>
+<script src="index.js"></script>
 </html>
