added div for errors

--- a/client/contact.html
+++ b/client/contact.html
@@ -36,6 +36,8 @@
         
         <label for="message">Your Message</label>
         <textarea id="message" name="message" rows="4" required></textarea>
+
+        <div id="validation-errors" class="error"></div>
         
         <button type="submit" class="cta-button" id="submit-button">Send Message</button>
       </form>
